# ostoo

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  book.toml  x86_64-os.json
.cargo/: config  config.toml
.github/workflows/: docs.yml
apic/: Cargo.toml
apic/src/: apic.rs  ioapic.rs  lib.rs
apic/src/io_apic/: mapped.rs  mod.rs
apic/src/local_apic/: mapped.rs  mod.rs  msr.rs  register.rs
apic_types/src/: lib.rs
apic_types/src/local/: icr.rs  id.rs  mod.rs  registers.rs  version.rs
completion-port/: Cargo.toml
completion-port/src/: lib.rs  port.rs  ring.rs  types.rs
crosstool/: .config  Dockerfile  build.sh  entrypoint.sh  mkvol.sh  run.sh
devices/: Cargo.toml
devices-macros/: Cargo.toml
devices-macros/src/: lib.rs
devices/src/: driver.rs  dummy.rs  lib.rs  macros.rs  pci.rs  task_driver.rs
devices/src/vfs/: exfat_vfs.rs  mod.rs  plan9_vfs.rs  proc_vfs.rs
devices/src/vfs/proc_vfs/: cpuinfo.rs  drivers.rs  idt.rs  ioapic.rs  irq_stats.rs  lapic.rs  maps.rs  meminfo.rs  memmap.rs  mod.rs  pci.rs  pmap.rs  tasks.rs  threads.rs  uptime.rs
devices/src/virtio/: blk.rs  exfat.rs  mod.rs  p9.rs  p9_proto.rs
docs/: SUMMARY.md  actors.md  apic-ioapic.md  blocking-protocol.md  code-audit.md  completion-port-design.md  compositor-design.md  cross-compilation.md  cross-compiling-c.md  display-input-ownership.md  exfat.md  file-descriptors.md  graphics-design.md  ipc-channels.md  lapic-timer.md  microkernel-design.md  mmap-design.md  networking-design.md  paging.md  process-spawning.md  rust-userspace-cross-compilation.md  scheduler-donate.md  scheduler.md  signals.md  smp-audit.md  sse-fpu.md  status.md  testing.md  unsafe-audit.md  userspace-plan.md  userspace-shell.md  vfs.md  virtio-9p.md  virtio-blk.md
docs/syscalls/: arch_prctl.md  brk.md  chdir.md  clock_gettime.md  clone.md  close.md  dup2.md  execve.md  exit.md  fcntl.md  fstat.md  futex.md  getcwd.md  getdents64.md  getpid.md  getrandom.md  io_create.md  io_ring_enter.md  io_setup_rings.md  io_submit.md  io_wait.md  ioctl.md  ipc_create.md  ipc_recv.md  ipc_send.md  irq_create.md  kill.md  lseek.md  madvise.md  mmap.md  mprotect.md  munmap.md  notify.md  notify_create.md  open.md  pipe2.md  read.md  rt_sigaction.md  rt_sigprocmask.md  rt_sigreturn.md  (+9 more)
kernel/: Cargo.toml  README.md  build.rs  x86_64-kernel.ld
kernel/src/: kernel_acpi.rs  keyboard_actor.rs  main.rs  memory.rs  ring3.rs  shell.rs  task_driver.rs  timeline_actor.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
libkernel/: Cargo.toml
libkernel/src/: allocator.rs  channel.rs  completion_port.rs  console.rs  consts.rs  cpuid.rs  elf.rs  file.rs  font.rs  framebuffer.rs  gap.rs  gdt.rs  interrupts.rs  irq_handle.rs  irq_mutex.rs  lib.rs  logger.rs  md5.rs  memory.rs  msr.rs  notify.rs  path.rs  process.rs  ps2.rs  serial.rs  service.rs  shmem.rs  signal.rs  spin_mutex.rs  stack_arena.rs  syscall.rs  vga_buffer.rs  wait_condition.rs
libkernel/src/allocator/: bump.rs  mod.rs
libkernel/src/apic/: mod.rs
libkernel/src/apic/io_apic/: mapped.rs
libkernel/src/apic/local_apic/: mapped.rs  msr.rs
libkernel/src/memory/: frame_allocator.rs  mod.rs  vmem_allocator.rs
libkernel/src/task/: executor.rs  keyboard.rs  mailbox.rs  mod.rs  registry.rs  scheduler.rs  simple_executor.rs  timer.rs
libkernel/src/vga_buffer/: capture.rs  mod.rs  timeline.rs
osl/: Cargo.toml
osl/src/: blocking.rs  clone.rs  dispatch.rs  elf_loader.rs  errno.rs  exec.rs  fd_close.rs  fd_helpers.rs  file.rs  io_port.rs  ipc.rs  irq.rs  lib.rs  notify.rs  signal.rs  spawn.rs  syscall_nr.rs  user_mem.rs
osl/src/syscalls/: fb.rs  fs.rs  io.rs  mem.rs  misc.rs  mod.rs  process.rs  service.rs  shmem.rs
pic8259_simple/: Cargo.toml
pic8259_simple/src/: lib.rs
scripts/: extract-musl-sysroot.sh  mkimg.sh  monitor.sh  ring3-test.sh  run-disk.sh  run.sh  user-build.sh  user-rs-build.sh
specs/: .gitignore  PLUSCAL.md  README.md  check.sh  completion_port.tla  completion_port_fixed.tla  spsc_ring.cfg  spsc_ring.tla
specs/completion_port/: completion_port.cfg  completion_port.tla
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
user/: Makefile  hello  hello-rs  mmap_free.c  mmap_prot.c  shell.c  sig_demo.c
user-rs/: Cargo.toml  x86_64-ostoo-user.json
user-rs/.cargo/: config.toml
user-rs/compositor/: Cargo.toml
user-rs/compositor/src/: font.rs  main.rs
user-rs/demo-client/: Cargo.toml
user-rs/demo-client/src/: main.rs
user-rs/hello-rs/: Cargo.toml
user-rs/hello-rs/src/: main.rs
user-rs/hello-std/: Cargo.toml
user-rs/hello-std/src/: main.rs
user-rs/kbd/: Cargo.toml
user-rs/kbd/src/: main.rs  scancode.rs
user-rs/mouse/: Cargo.toml
user-rs/mouse/src/: main.rs
user-rs/rt/: Cargo.toml
user-rs/rt/src/: alloc_impl.rs  compositor_proto.rs  io.rs  kbd_proto.rs  lib.rs  mouse_proto.rs  ostoo.rs  sys.rs  syscall.rs
user-rs/term/: Cargo.toml
user-rs/term/src/: font.rs  font_data.rs  main.rs  vt100.rs
user/include/: ostoo.h
user/lib/: ostoo.c
user/src/: env_demo.c  io_demo.c  io_pingpong.c  io_pong.c  ipc_async.c  ipc_fdpass.c  ipc_pong.c  ipc_port.c  ipc_sync.c  irq_demo.c  mmap_file.c  mmap_free.c  mmap_gap.c  mmap_prot.c  ring_sq_test.c  ring_test.c  shell.c  shmem_test.c  sig_chld.c  sig_demo.c  sig_int.c  sig_segv.c
