[package]
name = "apic"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
libkernel = { path = "../libkernel" }
apic_types = { git = "https://github.com/cmsd2/apic_types.git" }
bootloader = { version = "0.9.34", features = ["map_physical_memory"] }
raw-cpuid = "7.0.3"
spin = { version = "0.9", features = ["mutex"] }
lazy_static = "1.4.0"
x86_64 = "0.15"
bitflags = "1.2.1"
log = "0.4.8"
acpi = "6.1.1"
