[package]
name = "apic"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
libkernel  = { workspace = true }
acpi       = { workspace = true }
apic_types = { workspace = true }
bitflags   = { workspace = true }
bootloader = { workspace = true }
lazy_static = { workspace = true }
log        = { workspace = true }
raw-cpuid  = { workspace = true }
spin       = { workspace = true }
x86_64     = { workspace = true }
