[package]
name    = "devices"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader      = { workspace = true }
devices-macros  = { path = "../devices-macros" }
lazy_static     = { workspace = true }
libkernel       = { workspace = true }
log             = { workspace = true }
spin            = { workspace = true }
virtio-drivers  = { workspace = true }
x86_64          = { workspace = true }
