[package]
name = "kernel"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[package.metadata.bootimage]
run-args = [
    "-serial", "stdio"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
apic = { path = "../apic" }
libkernel = { path = "../libkernel" }
bootloader = { version = "0.8.2", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version="1.4.0", features=["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.7.5"
uart_16550 = "0.2.1"
pic8259_simple = { path = "../pic8259_simple" }
pc-keyboard = "0.5.0"
linked_list_allocator = "0.6.4"
acpi = "0.4.0"
log = "0.4.8"
