[package]
name = "kernel"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[package.metadata.bootimage]
run-args = [
    "-machine", "q35",
    "-serial", "stdio",
    #"-monitor", "stdio"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[features]
default = []
# Enable to run a one-shot ring-3 smoke test at boot (halts after exit syscall).
ring3_test = []

[dependencies]
devices               = { workspace = true }
libkernel             = { workspace = true }
osl                   = { workspace = true }
acpi                  = { workspace = true }
bootloader            = { workspace = true }
futures-util          = { workspace = true }
lazy_static           = { workspace = true }
linked_list_allocator = { workspace = true }
log                   = { workspace = true }
pc-keyboard           = { workspace = true }
spin                  = { workspace = true }
uart_16550            = { workspace = true }
volatile              = { workspace = true }
x86_64                = { workspace = true }
