[package]
name = "libkernel"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
bootloader = { version = "0.9.34", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version="1.4.0", features=["spin_no_std"] }
spin = { version = "0.9", features = ["mutex", "rwlock"] }
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.10"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10"
log = "0.4.8"
raw-cpuid = "7.0.3"
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
