[package]
name = "libkernel"
version = "0.1.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-xbuild]
memcpy = true
sysroot_path = "target/sysroot"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
acpi                  = { workspace = true }
apic_types            = { workspace = true }
completion-port       = { workspace = true }
bitflags              = { workspace = true }
bootloader            = { workspace = true }
conquer-once          = { workspace = true }
crossbeam-queue       = { workspace = true }
futures-util          = { workspace = true }
lazy_static           = { workspace = true }
linked_list_allocator = { workspace = true }
log                   = { workspace = true }
pc-keyboard           = { workspace = true }
pic8259               = { workspace = true }
raw-cpuid             = { workspace = true }
snafu                 = { workspace = true }
spin                  = { workspace = true }
uart_16550            = { workspace = true }
volatile              = { workspace = true }
x86_64                = { workspace = true }
